# quickjs-sandbox

./: .env.local  README.md  biome.json  bun.lockb  compose.yaml  index.html  justfile  lefthook.yml  package.json  vite.config.ts
.github/workflows/: check-codebase.yaml  deploy-openapi.yaml
docker/db/conf/: my.cnf
docker/db/script/: init.sql
docs/: openapi.yaml
server/: .env.example  Cargo.toml  README.md
server/docker/db/: Dockerfile
server/src/: lib.rs  main.rs
server/src/handlers/: healthz.rs  mod.rs
server/src/utils/: hash.rs
src/: app.tsx  main.rs  main.tsx
src/db/: state.rs
src/features/common/: Header.tsx
src/features/common/icons/: GitHub.tsx
src/features/editor/: Editor.module.css  Editor.tsx
src/features/editor/hooks/: useEditor.ts
src/features/logger/: Logger.module.css  Logger.tsx
src/handlers/: collect.rs  healthz.rs  mod.rs  share.rs
web/: README.md  bun.lockb  index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/public/: sw.js
web/src/: app.tsx  main.tsx
web/src/features/common/: Header.module.css  Header.tsx
web/src/features/common/icons/: GitHubIcon.tsx
web/src/features/editor/: Editor.module.css  Editor.tsx
web/src/features/editor/hooks/: useEditor.ts  useJSEditor.ts  useRunCode.ts
web/src/features/editor/styles/: Editor.module.css
web/src/features/logger/: Logger.module.css  Logger.tsx
web/src/styles/: app.module.css
