[package]
name = "js_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie", "cookie-private", "typed-header", "multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["filter-by-regex", "serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "chrono", "mysql"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
